# Arcturus

./: .gitignore  CLAUDE.md  HANDOVER.md  LICENSE  PROGRESS.md  README.md  WHATSNEW.md  conftest.py  pdesc.py  pyproject.toml  reachgame.py
actaea/: __init__.py  __main__.py  actaea-design.md  actaea-handoff-prompt.md  console.py  decode.py  dictionary.py  errors.py  io.py  loader.py  memory.py  objects.py  quetzal.py  screen.py  session.py  text.py  vm.py
arcturus/: __init__.py  __main__.py  abbrev.py  assembler.py  ast.py  astdump.py  cli.py  codegen.py  cosmos.py  dictionary.py  errors.py  irdump.py  lexer.py  lower.py  objects.py  parser.py  prelude.py  sema.py  storyfile.py  tokens.py  updater.py  worldmodel.py  zstring.py
cosmos/: actions.prelude  ambience.granule  conversations.granule  core.prelude  debug.granule  dispatch.prelude  english.prelude  extendedverbs.granule  foresight.granule  german.granule  infocom_talking.granule  loop.prelude  matrix.granule  nautical.granule  parser.prelude  plurals.granule  quotes.granule  scope.prelude  spanish.granule  spanish.prelude  statusline.granule  takeall.granule  verbose_exits.granule  verbs.prelude
docs/: 00-roadmap.md  01-syntax-reference.md  02-cosmos-and-parser.md  03-compiler-pipeline.md  04-codegen-mapping.md  05-granules.md  06-actaea-design.md  06-actaea.md  07-arc-image.md  07-conformance.md  08-arcimage-interpreters.md  08-arcimage-retro.md  09-arcimage-interpreters.md  attributes.md  b12-r3-checkpoint.md  extended-message-set.md  grammar-overhaul-checkpoint.md  message-set.md  verb-set.md
examples/: beispiel-deutsch.storyarc  brass-lantern.storyarc  cloak-of-darkness.storyarc  ejemplo-espanol.storyarc
tests/: conftest.py  test_after.py  test_after_other.py  test_again_scope.py  test_alter.py  test_ambience.py  test_appearance.py  test_arc_image.py  test_arcconvert.py  test_arcformat.py  test_arcimg.py  test_articles.py  test_assembler.py  test_backend.py  test_beyond.py  test_block_calls.py  test_catalogs.py  test_cave_rule.py  test_chaining.py  test_clear_screen.py  test_cli_extract.py  test_colours.py  test_components.py  test_computed_exits.py  test_consult_and_answers.py  test_container_scope.py  test_containers.py  test_containment_nothing.py  test_conversations.py  test_cosmos.py  test_death_undo.py  (+104 more)
(+254 files in other folders)
