[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arcturus"
version = "0.1.0"
description = "A high-level interactive-fiction language compiler that emits Z-machine version 5 story files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stefan" }]
# The compiler runtime depends on the Python standard library only. No runtime
# dependencies, so `arcturus` runs on a bare interpreter (see CLAUDE.md).
dependencies = []

[project.optional-dependencies]
# Development-only tooling. pytest is the test runner; it is never required to
# run the compiler itself.
# pytest-xdist spreads the suite across cores: the tests are independent and
# CPU-bound (each compiles a whole game), so a full run is minutes serially and
# tens of seconds in parallel.
dev = ["pytest>=7.0", "pytest-xdist>=3.0"]

[project.scripts]
arcturus = "arcturus.cli:main"
arcc = "arcturus.cli:main"

[tool.setuptools]
packages = ["arcturus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Parallel by default. `-n auto` uses every core; `--dist loadgroup` honours the
# xdist_group markers tests/conftest.py puts on the display-bound front-end
# tests, keeping those on one worker. To debug serially: `pytest -n 0`.
addopts = "-n auto --dist loadgroup"
